--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Welcome to my website</h1>
     <p>This is a simple HTML document.</p>
+    <h2>
+        This is a subheading
+    </h2>
     <script>
         console.log("Hello, World!");
     </script>
